kubernetes/main/apps/default/podinfo/app/http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
  annotations:
    external-dns/unifi: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Podinfo by Stefan Prodan
    gethomepage.dev/group: Networking
    gethomepage.dev/icon: mdi-test-tube
    gethomepage.dev/name: Podinfo
spec:
  hostnames:
    - podinfo.techtales.io
  parentRefs:
    - name: envoy
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: podinfo
          port: 9898
      matches:
        - path:
            type: PathPrefix
            value: /
